--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,45 +1,7 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 1rem;
+.header{
+    border-bottom: 1px solid #E2E8F0;
   }
   
-  /*@media (min-width: 768px) {
-    .header {
-      padding: 2rem 10%;
-    }
-  }*/
-  .nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 1.5rem;
-    /* font-family: 'Montserrat', sans-serif; */
-    font-size: 1rem;
-  }
-  
-  .logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    text-decoration: none;
-    color: #ddd6cb;
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: 0.15rem;
-    text-transform: uppercase;
-    font-size: 1.5rem;
-  }
-  
-  .logo img {
-    width: 5rem;
-    height: 5rem;
-    object-fit: contain;
-    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
-  }
   .navbar {
     position: relative;
     z-index: 999;
@@ -47,12 +9,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1.5rem;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 10vh;
     position: fixed;
     top: 0;
     width: 100%;
    
   }
+  
   .hamburger {
     display: none;
   }
@@ -117,6 +82,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 1rem 2 rem;
+        background-color: #ffffff;
         height: 10vh;
         position: fixed;
         top: 0;
